--- a/DemoApp/DemoApp/Resources/Base.lproj/Main.storyboard
+++ b/DemoApp/DemoApp/Resources/Base.lproj/Main.storyboard
@@ -18,34 +18,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pHW-lt-LUQ">
-                                <rect key="frame" x="171.5" y="318.5" width="32" height="30"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ycw-em-aek">
+                                <rect key="frame" x="37.5" y="183.5" width="300" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="GBW-tF-2xN"/>
+                                    <constraint firstAttribute="height" constant="300" id="sfU-Fd-2KB"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pHW-lt-LUQ" userLabel="Next Button">
+                                <rect key="frame" x="171.5" y="587" width="32" height="30"/>
                                 <state key="normal" title="Next"/>
                                 <connections>
-                                    <segue destination="fZM-rH-f08" kind="show" id="zFe-az-cjY"/>
+                                    <segue destination="i7o-Yo-YWQ" kind="show" id="nXB-QT-6tN"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="pHW-lt-LUQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2g0-Ld-Pgj"/>
-                            <constraint firstItem="pHW-lt-LUQ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="UnG-gm-GYh"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="pHW-lt-LUQ" secondAttribute="bottom" constant="50" id="Zfx-H7-u2o"/>
+                            <constraint firstItem="ycw-em-aek" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="cdw-0a-Wu2"/>
+                            <constraint firstItem="ycw-em-aek" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="e3E-Y1-flA"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="ule-gS-nms"/>
+                    <connections>
+                        <outlet property="imageView" destination="ycw-em-aek" id="nmJ-4Z-r0X"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="841" y="-564"/>
-        </scene>
-        <!--Second View Controller-->
-        <scene sceneID="xmo-jS-hZX">
-            <objects>
-                <viewController id="fZM-rH-f08" customClass="SecondViewController" customModule="DemoApp" customModuleProvider="target" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aVS-OY-0bE" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1548" y="-564"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="DTR-lv-Ci0">
@@ -64,6 +68,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HtU-tn-EgL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="104.8" y="-564.46776611694156"/>
+        </scene>
+        <!--Second View Controller-->
+        <scene sceneID="Eql-1j-np1">
+            <objects>
+                <viewController id="i7o-Yo-YWQ" customClass="SecondViewController" customModule="DemoApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="oLs-Ix-Z01">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="ljR-BA-rRB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="X23-Xu-eqI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1620" y="-564"/>
         </scene>
     </scenes>
 </document>
